--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-bootstrap-table",
+  "name": "react-bootstrap-table-rad",
   "version": "4.3.1",
   "description": "It's a react table for bootstrap",
   "main": "./lib/index.js",
@@ -10,7 +10,8 @@
   "scripts": {
     "lint": "eslint src",
     "test": "jest",
-    "start": "gulp example-server"
+    "start": "gulp example-server",
+    "build": "gulp umdBuild"
   },
   "keywords": [
     "react",
@@ -55,9 +56,9 @@
     "jest-cli": "^19.0.2",
     "jquery": "^2.1.4",
     "jsx-loader": "^0.13.2",
-    "react": "16.0.0",
+    "react": "17.0.2",
     "react-bootstrap": "0.31.3",
-    "react-dom": "16.0.0",
+    "react-dom": "17.0.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-router": "^3.2.0",
     "style-loader": "^0.13.0",
