--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-bootstrap-table-rad",
-  "version": "4.3.3",
+  "version": "4.3.4",
   "description": "It's a react table for bootstrap",
   "main": "./lib/index.js",
   "repository": {
@@ -11,7 +11,7 @@
     "lint": "eslint src",
     "test": "jest",
     "start": "gulp example-server",
-    "build": "gulp umdBuild"
+    "build": "gulp default"
   },
   "keywords": [
     "react",
