--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-bootstrap-table-rad",
-  "version": "4.3.4",
+  "version": "4.3.5",
   "description": "It's a react table for bootstrap",
   "main": "./lib/index.js",
   "repository": {
@@ -75,7 +75,8 @@
     "react-s-alert": "^1.3.2"
   },
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0 || ^17.0.2"
+    "react": "^15.0.0 || ^16.0.0",
+    "react-dom": "^15.0.0 || ^16.0.0"
   },
   "jest": {
     "testEnvironment": "node",
