--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "react-s-alert": "^1.3.2"
   },
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.2",
+    "react-dom": "^15.0.0 || ^16.0.0 || ^17.0.2"
   },
   "jest": {
     "testEnvironment": "node",
