--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-bootstrap-table-rad",
-  "version": "4.3.6",
+  "version": "4.3.7",
   "description": "It's a react table for bootstrap",
   "main": "./lib/index.js",
   "repository": {
@@ -56,9 +56,9 @@
     "jest-cli": "^19.0.2",
     "jquery": "^2.1.4",
     "jsx-loader": "^0.13.2",
-    "react": "17.0.2",
+    "react": "^18.3.1",
     "react-bootstrap": "0.31.3",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.3.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-router": "^3.2.0",
     "style-loader": "^0.13.0",
@@ -75,8 +75,8 @@
     "react-s-alert": "^1.3.2"
   },
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0 || ^17.0.2",
-    "react-dom": "^15.0.0 || ^16.0.0 || ^17.0.2"
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.2 || ^18.3.1",
+    "react-dom": "^15.0.0 || ^16.0.0 || ^17.0.2 || ^18.3.1"
   },
   "jest": {
     "testEnvironment": "node",
